# modelo720

./: .gitignore  Cargo.toml  Makefile  main.py  pyproject.toml
modelo720/: __init__.py  utils.py
modelo720/config/: __init__.py  logging.py
modelo720/degiro/: __init__.py  reader.py  references.py  utils.py
modelo720/ibkr/: __init__.py  reader.py  references.py
modelo720/model/: __init__.py  compute.py  references.py  utils.py
src/: main.rs
