[project]
name = "modelo720"
version = "0.1.0"
description = "Libreria para declarar el Modelo 720 a la AEAT"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "currencyconverter>=0.18.2",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "pydantic>=2.10.5",
]

[tool.ruff]
line-length = 120
target-version = "py312"
include = ["*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
